--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,8 +1,3 @@
-/*
- * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
- * https://css-tricks.com/international-box-sizing-awareness-day/
- * Do not modify these two selectors, please
- */
 html {
   box-sizing: border-box;
 }
@@ -29,4 +24,27 @@ body {
   width: 90%;
   margin: auto;
   background-color: #f4f1ec;
+  padding-bottom: 5%;
+ }
+
+ /* Media query for large screen */
+
+ @media only screen and (min-width: 1024px) {
+   .main-header {
+    margin-top: 240px;
+    margin-left: 5%;
+    width: 20% ;
+    float: left;
+   }
+   header > div > img {
+    position:relative;
+    top:30%;
+    height: 80%;     
+  }
+   main {
+    width: 60%;
+    float: right;
+    margin-right: 5%;
+    padding-top:200px;
+   }
  }
